<resources>
    <!-- Start: register.xml -->
    <string name="RegisterHeadline">REGISTER</string>
    <string name="RegisterUsername">Username</string>
    <string name="RegisterEmail">Email</string>
    <string name="RegisterPassword">Passowrd</string>
    <string name="btn_Register">Register</string>
    <string name="AlreadyRegistred">Already registred. Log me in!</string>
    <!-- End: register.xml -->
       
    <!-- Start: dashboard_logout.xml -->
    <string name="DashboardHeadline">WELCOME</string>
    <string name="DashboarLogout">Log me Out!</string>
    <!-- End: dashboard_logout.xml -->
    
    
    <string name="btn_login">LogIn</string>
    <string name="btn_next">Weiter</string>
    <string name="btn_start">Starten</string>
    <string name="btn_change">Ändern</string>
    <string name="btn_save">Speichern</string>
    <string name="btn_use">PKW wählen</string>
    <string name="btn_admin">PKW verwalten</string>
    <string name="btn_add">PKW Hinzufügen</string>
    <string name="btn_delete">PKW Entfernen</string>
    <string name="btn_manage">User verwalten</string>
    <string name="btn_export">Daten exportieren</string>
    <string name="btn_switch">Zwischenziel</string>
    <string name="btn_purpose">Zweck</string>
    <string name="app_name">CarLog</string>

</resources>